# plasmidai

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: README.md  dna_bpe_tokenizer.json  download.sh  plasmids.splits.csv  splits.csv  tokenizer.ipynb
data/plasmids/: DB_clu.tsv
data/scripts/: 1_filter.py  2_partition.py  partition.py
data/tokenizer/: compare_tokenizers.ipynb  plasmids_replicon_dna_bpe_tokenizer_cutoff_rc.json  tokenizer.ipynb  tokenizer_trainer.py
data/tokenizers/: 1_tokenizer_bpe.ipynb  1_tokenizer_bpe.py  2_tokenizer_nt.py  3_compare_tokenizers.ipynb  compare_tokenizers.ipynb  dna_bpe_tokenizer_cutoff_rc.json  dna_bpe_tokenizer_offset.json  plasmids_replicon_dna_bpe_tokenizer_cutoff_rc.json  tokenizer.ipynb  tokenizer_nt.json
diffusion/d3pm/: d3pm.py  lit.py  models.py  train.py
diffusion/evodiff/: collate.py  lit.py  losses.py  model.py  train.py
evo/: littrain.py
evo/configs/evo-fine-tune/: basemodel.yaml  soroush_basemodel.yaml  test_cedar.yaml  test_narval.yaml
evo/data_format/: DataFormat.py
evo/data_format/run_tokenizer/: dna_bpe_tokenizer_offset.json  open_tokenizer.py  tokenizer.ipynb  tokenizer_trainer.py
evo/loss/: EvoLoss.py
evo/model/: EvoMamba.py  LitEvo.py
evo/model/utils_evo/: EvoMamba_old.py  FinalRegressor.py  VideoMamba.py  download_weights.py  evo-download.py  learning.py  (+3 more)
plasmidai/: __init__.py  paths.py  utils.py
plasmidai/data/: plasmids.splits.csv
plasmidai/datasets/: __init__.py  plasmid.py  replicons.py  utils.py
plasmidai/experimental/: callbacks.py  lit.py  optimizers.py  sample.py  train.py
scripts/: train_llm.sh
slurm/: cc_deps.sh  cc_finetune_llm.sh  cc_sample_llm.sh  cc_sync.sh  cc_train_llm.sh  cc_train_plasmid.sh  cc_train_replicon.sh  vector_train_llm.sh
src/: paths.py  utils.py
src/datasets/: __init__.py  plasmid.py  replicons.py  tokenizers.py  utils.py
src/experimental/: callbacks.py  lit.py  optimizers.py  sample.py  train.py
src/plasmid_classification/: new_seqs_2024-07-26_local_alignment_results_normalized.csv  sequential_alignment_v2.py
valid/: README.md  protein.ipynb
valid/batch-wide_analysis/: mobsuite_analysis.py
valid/protein-validation/: amrfinder_runner.py  esmfold_runner.py  esmfold_utils.py
(+141 files in other folders)
