[tool.poetry]
name = "plasmidai"
version = "1.2.0"
description = "The largest open-source library to develop plasmid foundation models and generate novel plasmids using machine learning."
authors = ["iGEM Toronto <Adibvafa.fallahpour@mail.utoronto.ca>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/igem-toronto/plasmidai"
repository = "https://github.com/igem-toronto/plasmidai"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2"
pytorch-lightning = "*"
packaging = "*"
wandb = "*"
numpy = "*"
pandas = "*"
biopython = "*"
jsonargparse = "*"
transformers = "*"
tqdm = "*"
wheel = "*"
causal-conv1d = "*"
mamba-ssm = "*"

[tool.poetry.dev-dependencies]
# Add any development dependencies here, e.g.:
# pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"